--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-$ repo init -u https://github.com/AOKP/platform_manifest.git -b jb-mr1
+$ repo init -u https://github.com/vigor/android.git -b AOKP-4.2
 $ repo sync
-$ . ./platform_manifest/manual_add_kernel_manifest.sh
+$ . build/envsetup.sh
+$ time brunch vigor
