--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-$ repo init -u https://github.com/vigor/android.git -b AOKP-4.2
-$ repo sync
+$ repo init -u https://github.com/vigor/android.git -b AOKP-4.2-ion
 $ . build/envsetup.sh
 $ time brunch vigor
